Reverted back to initial state to make linux pass again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,17 +55,17 @@ jobs:
       # ================================================
       - name: Configure CMake
         run: |
-          cmake -S . -B build `
-            -DCMAKE_BUILD_TYPE=Release `
-            -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=build/bin `
-            -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=build/lib `
+          cmake -S . -B build \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=build/bin \
+            -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=build/lib \
             -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY=build/lib
 
       # ================================================
       # Build everything
       # ================================================
       - name: Build
-        run: cmake --build build --config Release --parallel 2
+        run: cmake --build build --config Release --parallel
 
       # ================================================
       # Windows: Run windeployqt after build
