--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,23 +74,31 @@ jobs:
         run: cmake --build build --config Release --parallel 2
 
       - name: Deploy Qt runtime (windeployqt)
+        if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          $$   qtBin = "   $${{ env.Qt6_DIR }}/bin"
+          # Qt6_DIR is set by install-qt-action
+          $qtBin = "${{ env.Qt6_DIR }}/bin"
           $exePath = "build/bin/VisualLinkerScript.exe"
 
-          if (Test-Path $exePath) {
-            & "$qtBin/windeployqt.exe" `
-              --dir "build/bin" `
-              --libdir "build/bin" `
-              --plugindir "build/bin/plugins" `
-              --no-compiler-runtime `
-              --no-translations `
-              $exePath
-          } else {
-            Write-Error "Executable not found: $exePath"
+          Write-Host "Using Qt bin path: $qtBin"
+          if (-not (Test-Path "$qtBin/windeployqt.exe")) {
+            Write-Error "windeployqt.exe not found at $qtBin"
             exit 1
           }
+
+          if (-not (Test-Path $exePath)) {
+            Write-Error "Executable not found at $exePath"
+            exit 1
+          }
+
+          & "$qtBin/windeployqt.exe" `
+            --dir "build/bin" `
+            --libdir "build/bin" `
+            --plugindir "build/bin/plugins" `
+            --no-compiler-runtime `
+            --no-translations `
+            $exePath
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
