--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        run: cmake --build build --config Release --parallel 2   # keep low to avoid OOM
+        run: cmake --build build --config Release --parallel 2
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
@@ -73,25 +73,32 @@ jobs:
       - name: Build
         run: cmake --build build --config Release --parallel 2
 
-      - name: Deploy Qt runtime (windeployqt)        
+      - name: Deploy Qt runtime (windeployqt)
+        if: runner.os == 'Windows'
+        shell: pwsh
         run: |
           # Debug: show all relevant env vars
           Write-Host "Qt6_DIR env var = $env:Qt6_DIR"
           Write-Host "Full Qt bin path would be = $env:Qt6_DIR/bin"
-          # Use env var directly (safer than ${{ }} inside string)
+
+          # Use env var directly
           $qtBin = "$env:Qt6_DIR/bin"
           $exePath = "build/bin/VisualLinkerScript.exe"
+
           Write-Host "Using Qt bin path: $qtBin"
-          Write-Host "Looking for windeployqt.exe at: $qtBin/windeployqt.exe"          
+          Write-Host "Looking for windeployqt.exe at: $qtBin/windeployqt.exe"
+
           if (-not (Test-Path "$qtBin/windeployqt.exe")) {
             Write-Error "windeployqt.exe NOT found! Check Qt6_DIR value above."
             Get-ChildItem -Path "$env:Qt6_DIR" -Recurse -File | Where-Object { $_.Name -like "*windeployqt*" } | Select-Object FullName
             exit 1
           }
+
           if (-not (Test-Path $exePath)) {
             Write-Error "Main executable not found at $exePath"
             exit 1
           }
+
           Write-Host "Running windeployqt..."
           & "$qtBin/windeployqt.exe" `
             --dir "build/bin" `
@@ -100,6 +107,7 @@ jobs:
             --no-compiler-runtime `
             --no-translations `
             $exePath
+
           Write-Host "windeployqt finished."
 
       - name: Upload Windows artifact
